# Machine_build_from

./: EDA.ipynb  EDA_feature.ipynb  LinearRegression_From_Scratch.py  README.md  Test.ipynb  demo.ipynb  naive_bayes.py  test.ipynb  test.py  train.ipynb  train_linear.py
Logistics_From_Scratch/: train.py
class/: EDA_feature.ipynb  train_from.py  train_sklearn.py
class/model/: SVM_model.py  logistics_model.py  naive_bayes.py
model/: KNN_model.py
regression/: tesst.ipynb
spam/: pyproject.toml
spam/src/: __main__.py  app.py  das.py  knn.py  knn_compare_scikit.py  learn.py  logistic.py
spam/src/model/: knn.py  logistic.py
spam/src/visualize/: k.py  knn_compare_scikit.py  matr.py  plottest.py
